# jobcan-from-gcalender

./: .env.sample  README.md
.github/workflows/: ci-for-google-calender.yaml
google-calender/: .lint.py  README.md  pyproject.toml
google-calender/google_calender/: gcalender.py  get_events.py  protocols.py
